tests/sema/bad/11_channel_arity.sg
let c:channel<int, int> = 0; // channel<T> должен иметь 1 аргумент
